--- a/public/styles.css
+++ b/public/styles.css
@@ -78,10 +78,6 @@ input, textarea {
     min-width: 200px;
 }
 
-form {
-    margin: 1.5rem;
-}
-
-#response {
-    margin: 1.5rem;
+body {
+    padding: 1.5rem;
 }
